--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,5 +15,7 @@ jobs:
         run: |
           ./result/bin/mkgif
           file test/touroku.m4v
+          ./result/bin/mkgif test/touroku.m4v
           file test/touroku.gif
           ./result/bin/mkgif test/touroku.m4v test/touroku.gif 200
+          file test/touroku.gif
