--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,7 @@ jobs:
       - name: nix
         run: |
           curl https://nixos.org/nix/install | sh
-          . /home/runner/.nix-profile/etc/profile.d/nix.sh
-          nix-build
-      - name: run mkgif
+      - name: run tests
         run: |
-          ./result/bin/mkgif
-          file test/touroku.m4v
-          ./result/bin/mkgif test/touroku.m4v
-          file test/touroku.gif
-          ./result/bin/mkgif test/touroku.m4v test/touroku.gif 200
-          file test/touroku.gif
+          . /home/runner/.nix-profile/etc/profile.d/nix.sh
+          ./test/tests.bash
